c3p0-0.10.1
	-- Implement more and "louder" (log ugly stack traces) validation of
	   config properties.
	-- Modify former InUseLock (now InternalUseLock) and NewProxyConnection
	   to use ReentrantLock rather than native monitors, to prevent pinning
	   when clients run on loom virtual threads.
	   Thanks Alex Kormukhin and Jeffrey Tucker!
	-- Implement config parameter markSessionBoundaries, so that users can
	   disable JDBC 4.3 beginRequest / endRequest session boundary marking
	   when JDBC drivers so undesirable things with those hints.
	   Thanks Bikas Anand!
	-- Implement more careful examination of begin/endRequest methods, to take
	   into account the case where those methods exist on the JDBC driver Connection
	   implementation, but not in the Connection interface of a pre-Java-9 JVM.
	   We still support begin/endRequest in this case, but reflectively.
	   Thanks Vlad Skarzhevskyy, khushboo11-dotcom!
c3p0-0.10.0
	-- A bit more testing
c3p0-0.10.0-pre7
	-- Improve performance of begin/endRequest support
	-- Implement c3p0-loom UninstrumentedVirtualThreadPerTaskTaskRunnerFactory
	-- Change mind. Eliminate naggingly prescriptive equals/hashCode pseudorequirements
	   from plugin interfaces, because our canonicalization strategy is by key, doesn' actually
	   rely upon those implementations.
	-- Guard collection of MBeanAttributeInfo against items that would have no getter
	   or setter to prevent ugly IntrospectionExceptions.
	   See https://github.com/swaldman/c3p0/issues/128
	   Thanks @philippscs!
	-- Let C3P0PooledConnectionPool manager test introspected authentication that appears
	   perhaps incomplete, and revert to NULL_AUTH (no-arg DataSource.getConnection()) if
	   the test fails.
	   See, should address, https://github.com/swaldman/c3p0/issues/159
	   Thanks @sbaeumlisberger!
c3p0-0.10.0-pre6
	-- Lots of documentation work.
	-- Implement attemptResurrectOnCheckin config parameter.
	   See https://github.com/swaldman/c3p0/issues/47