@@ -1,3 +1,5 @@
+	-- Prevent freeze due to re-waiting if a non-Exception Throwable occurs
+	   while acquiring a PreparedStatement to cache. Thanks Totyo Totev!
 c3p0-0.10.1
 	-- Implement more and "louder" (log ugly stack traces) validation of
 	   config properties.
